objects/Speaker__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Speakers</relationshipLabel>
        <relationshipName>Speakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Best_Practice_Story_Brief_Description__c</fullName>
        <label>Best Practice Story (Brief Description)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Biography__c</fullName>
        <label>Biography</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the speaker received a gift.</inlineHelpText>
        <label>Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hero_Slide__c</fullName>
        <label>Hero Slide</label>
        <picklist>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Handler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Handler</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Speakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_Event__c</fullName>
        <formula>HYPERLINK(&quot;./&quot; &amp;   Session__r.Track__r.Event__r.Id   ,  Session__r.Track__r.Event__r.Name , &quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/a</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publish_to_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be used for web integration if you wish you publish data to your website.</description>
        <label>Publish to Web?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Form__c</fullName>
        <label>Release Form</label>
        <picklist>
            <picklistValues>
                <fullName>Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received - Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received - No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Speakers</relationshipLabel>
        <relationshipName>Speakers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Speak_Hierarchy__c</fullName>
        <label>Speak Hierarchy</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Speaker_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Speaker Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Speakers</relationshipLabel>
        <relationshipName>Speakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Speaker_Details__c</fullName>
        <label>Speaker Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Speaker_Display_Name__c</fullName>
        <formula>Speaker_Contact__r.FirstName &amp; &quot; &quot; &amp;  Speaker_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speaker Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Image__c</fullName>
        <label>Speaker Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Speaker_Rating__c</fullName>
        <inlineHelpText>Enter speaker evaluation score (1-5, with 5 as the highest)</inlineHelpText>
        <label>Speaker Rating</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Speaker_Status__c</fullName>
        <label>Speaker Status</label>
        <picklist>
            <picklistValues>
                <fullName>Nominated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a good fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request - sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request - tentative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request - accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request - declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmation sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No comp pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Publish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Speaker_Type__c</fullName>
        <label>Speaker Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celebrity Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Session Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keynote Speaker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Topic_Expertise__c</fullName>
        <label>Topic Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>Topic 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Topic 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Topic 3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Track</label>
        <referenceTo>Track__c</referenceTo>
        <relationshipLabel>Speakers</relationshipLabel>
        <relationshipName>Speakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Speaker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Speaker_Display_Name__c</columns>
        <columns>Session__c</columns>
        <columns>Track__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Speaker-{0000}</displayFormat>
        <label>Speaker Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>